Updates notebooks to include Menets

--- a/notebooks/drugs.ipynb
+++ b/notebooks/drugs.ipynb
@@ -56,6 +56,7 @@
         "\n",
         "from lmmnn.layers import NLL\n",
         "from lmmnn.callbacks import EarlyStoppingWithSigmasConvergence\n",
+        "from lmmnn.menet import menet_fit, menet_predict\n",
         "\n",
         "from tensorflow.keras.preprocessing import text, sequence\n",
         "from tensorflow.keras import Model\n",
@@ -87,7 +88,7 @@
       "source": [
         "# The drugs_df CSV comes from simple binding the train and test TSVs from Gräßer et al. (2018),\n",
         "# available in the UCI ML repo, see our paper.\n",
-        "drugs = pd.read_csv('data/drugs_df.csv')\n",
+        "drugs = pd.read_csv('drugs_df.csv')\n",
         "RE_col = 'drug_name'"
       ],
       "execution_count": null,
@@ -536,19 +537,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SFKo7bEcWgZm"
-      },
-      "source": [
-        "def data_split(rseed):\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, drugs['rating'], test_size=0.2, random_state=rseed)\n",
-        "    return X_train, X_test, y_train, y_test"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "bPnvvceLWgZm"
       },
       "source": [
@@ -601,7 +589,6 @@
         "    \n",
         "    patience = epochs if patience is None else patience\n",
         "    callbacks = [EarlyStoppingWithSigmasConvergence(patience=patience), PrintSigmas()]\n",
-        "    # callbacks = [EarlyStopping(patience=patience)]\n",
         "    history = model.fit([X_train[x_cols], y_train, X_train[RE_col]], None,\n",
         "                        batch_size=batch_size, epochs=epochs, validation_split=0.1,\n",
         "                        callbacks=callbacks, verbose=1)\n",
@@ -628,6 +615,21 @@
         "    y_pred = np.clip(y_pred, 1, 10)\n",
         "    return y_pred, (None, None)\n",
         "\n",
+        "def reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch_size, epochs, patience, deep=False):\n",
+        "    q = n_cats\n",
+        "    clusters_train, clusters_test = X_train[RE_col].values, X_test[RE_col].values\n",
+        "    X_train, X_test = X_train[x_cols].values, X_test[x_cols].values\n",
+        "    y_train, y_test = y_train.values, y_test.values\n",
+        "\n",
+        "    model = lstm_ignore()\n",
+        "    model.compile(loss='mse', optimizer='adam')\n",
+        "\n",
+        "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q,\n",
+        "        batch_size, epochs, patience, verbose=True)\n",
+        "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\n",
+        "    y_pred = np.clip(y_pred, 1, 10)\n",
+        "    return y_pred, (sig2e_est, None), n_epochs\n",
+        "\n",
         "def reg_nn(X_train, X_test, y_train, y_test, n_cats, batch=30, epochs=100, patience=5, reg_type='ohe', deep=False):    \n",
         "    if reg_type == 'ohe':\n",
         "        y_pred, sigmas = reg_nn_ohe(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
@@ -635,8 +637,12 @@
         "        y_pred, sigmas = reg_nn_lmm(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
         "    elif reg_type == 'ignore':\n",
         "        y_pred, sigmas = reg_nn_ignore(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
-        "    else:\n",
+        "    elif reg_type == 'embed':\n",
         "        y_pred, sigmas = reg_nn_embed(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+        "    elif reg_type == 'menet':\n",
+        "        y_pred, sigmas, _ = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, batch, epochs, patience, deep)\n",
+        "    else:\n",
+        "        raise ValueError(reg_type + ' is an unknown reg_type')\n",
         "    mse = np.mean((y_pred - y_test)**2)\n",
         "    return mse, sigmas"
       ],
@@ -667,14 +673,16 @@
         "    print(' finished lm deep=%s, mse: %.2f' % (deep, mse_lm))\n",
         "    mse_em, _ = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='embed', deep=deep)\n",
         "    print(' finished embed deep=%s, mse: %.2f' % (deep, mse_em))\n",
+        "    mse_me, sigmas_me = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='menet', deep=deep)\n",
+        "    print(' finished menet deep=%s, mse: %.2f' % (deep, mse_me))\n",
         "    mse_dec = 100 * (mse_lmm - mse_lm) / mse_lm\n",
         "    res.loc[counter + 0] = [i, 'ohe', deep, mse_lm, np.nan, np.nan]\n",
         "    res.loc[counter + 1] = [i, 'lmm', deep, mse_lmm, sigmas[0], sigmas[1]]\n",
         "    res.loc[counter + 2] = [i, 'ignore', deep, mse_ig, np.nan, np.nan]\n",
         "    res.loc[counter + 3] = [i, 'embed', deep, mse_em, np.nan, np.nan]\n",
-        "    counter += 4\n",
+        "    res.loc[counter + 4] = [i, 'menet', deep, mse_me, sigmas_me[0], np.nan]\n",
+        "    counter += 5\n",
         "    print('iteration %d, deep=%s, mse change from mse_lm: %.2f%%' % (i, deep, mse_dec)) \n",
-        "    res.to_csv('/content/drive/My Drive/res_drugs.csv')\n",
         "\n",
         "kf = KFold(n_splits=5)\n",
         "y = drugs['rating']\n",
@@ -2423,7 +2431,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "res.to_csv('../results/res_drugs.csv')"
+        "res.to_csv('../results/drugs.csv')"
       ]
     }
   ]
