Changes relative path in notebooks after refactoring

--- a/notebooks/neurips_single_categorical/drugs.ipynb
+++ b/notebooks/neurips_single_categorical/drugs.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "import os\n",
         "import sys\n",
-        "module_path = os.path.abspath(os.path.join('..'))\n",
+        "module_path = os.path.abspath(os.path.join('../..'))\n",
         "if module_path not in sys.path:\n",
         "    sys.path.append(module_path)"
       ]
