--- a/notebooks/neurips_single_categorical/drugs.ipynb
+++ b/notebooks/neurips_single_categorical/drugs.ipynb
@@ -664,7 +664,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "res.to_csv('../results/res_drugs.csv')"
+        "res.to_csv('../../results/res_drugs.csv')"
       ]
     }
   ],
